Fix gap between focus highlight and rounded border on login page
Overlay hidden will cause rounded corners to clip their contents.

--- a/less/common.less
+++ b/less/common.less
@@ -48,9 +48,9 @@
 }
 
 .inputs-box {
-	padding: 1px;
 	border: solid 1px @colorGray12;
 	border-radius: 5px;
+	overflow: hidden;
 	background: #fff;
 	margin: 0 0 .8em;
 	text-align: center;
